<resources>
    <string name="app_name">CBT-i Coach</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="blankcontentdescription">\u00A0</string>
    <string name="title_2">coach</string>
    <string name="title_10b">Software End User License Agreement</string>
    <string name="s_Continue">Continue</string>
    <string name="title_10d">Welcome to CBT-i Coach</string>
    <string name="s_coach">coach</string>
    <string name="s_IAccept">I Accept</string>
    <string name="s_CBTi">CBT-i</string>
    <string name="s_dva">United States Department \nof Veterans Affairs (\"VA\")</string>
    <string name="welcome_10d">Welcome to Cognitive Behavioral Therapy for Insomnia (CBT-i) Coach, a mobile companion for in-person therapy for promoting better sleep.\n\nCBT-i Coach does not replace professional treatment.  Let your healthcare provider know if you are using CBT-i Coach.</string>
    <string name="sleepprescription">Sleep Prescription</string>
    <string name="sleepprescriptiondescription">Sleep Prescription Information</string>
    <string name="sleepprescriptionnote">Your Sleep Prescription will appear here once you have completed 5 sleep day diaries</string>
    <string name="sleeppwaketime">Wake Time</string>
    <string name="sleeppefficiency">Efficiency</string>
    <string name="sleeppbedtime">Bedtime</string>
    <string name="s_Help">Help</string>
    <string name="s_Pause">Pause</string>
    <string name="s_Reminders">Reminders</string>
    <string name="s_About">About</string>
    <string name="s_Learn">Learn</string>
    <string name="s_Tools">Tools</string>
    <string name="s_MySleep">My Sleep</string>
    <string name="s_Home">Home</string>
    <string name="s_Previous">Previous</string>
    <string name="s_UpdateSleep">Update Sleep</string>
    <string name="s_Assessment">Assessment</string>
    <string name="s_MySleepHelp">Record sleep habits and help with keeping a sleep schedule</string>
    <string name="s_ToolsHelp">Ways to prepare for sleep and quiet your mind</string>
    <string name="s_LearnHelp">View information about sleep</string>
    <string name="s_RemindersHelp">Stick to a healthy sleep schedule</string>
    <string name="s_ProjectPartners">Project Partners</string>
    <string name="s_ProjectTeam">Project Team</string>
    <string name="s_Settings">Settings</string>
    <string name="s_NoHistory">No History</string>
    <string name="s_ScheduleAssessments">Schedule Assessments</string>
    <string name="s_TakeAssessment">Take Assessment</string>
    <string name="s_ResultsHistory">Results History</string>
    <string name="s_SleepPrescription">Sleep Prescription</string>
    <string name="s_INeedMoreSleep">I Need More Sleep</string>
    <string name="s_NeedSleep">Need Sleep</string>
    <string name="s_AddtomyCalendar">Add to my Calendar</string>
    <string name="s_31bhelp">Use this assessment, the Insomnia Severity Index, to get a sense of your insomnia symptoms over time. It is recommended that you do not take this assessment more than once per week.</string>
    <string name="s_32ehelp">This graph shows how your scores on the assessment have changed over time. It is normal for your symptoms to go up and down a bit from week to week.  Higher scores mean that you have more severe symptoms, so if your line is going up, you may want to check in with your provider and let him or her know (or get a provider if you don\'t already have one).</string>
    <string name="s_21b44">If your sleep or daytime functioning is affected by some unusual event (such as an illness, or an emergency) you may make brief notes on your diary.</string>
    <string name="s_21b33"> If you remember your sleep habits for that day, you can edit the diary through the "Past Diaries" tab. Otherwise leave it blank.</string>
    <string name="s_21b5">•	What do the words "bed" and "day" mean on the diary?</string>
    <string name="s_21b6">•	Will answering these questions about my sleep keep me awake?</string>
    <string name="s_21b3">•	What should I do if I miss a day?</string>
    <string name="s_21b4">•	What if something unusual affects my sleep or how I feel in the daytime?</string>
    <string name="s_21b1">•	What is a Sleep Diary?</string>
    <string name="s_21b2">•	How often and when do I fill out the sleep diary?</string>
    <string name="s_21b22">It is necessary for you to complete your sleep diary every day. Remember, you will generally be answering questions about your sleep habits during the previous day and night. If possible, the sleep diary should be completed within one hour of getting out of bed in the morning.</string>
    <string name="s_21b66">This is not usually a problem. You should not worry about giving exact times, and you should not watch the clock. Just give your best estimate.</string>
    <string name="s_21b11">A sleep diary is designed to gather information about your daily sleep pattern.  It should be filled out every day and is designed to be completed within two hours of getting out of bed in the morning.  If you forget to fill in the diary or are unable to finish it, leave the diary blank for that day.</string>
    <string name="s_21b55">This diary can be used for people who are awake or asleep at unusual times. In the sleep diary, the word \‘day\' is the time when you choose or are required to be awake. The term "bed" means the place where you usually sleep.</string>
    <string name="s_SleepDiary">Sleep Diary</string>
    <string name="s_PastWeeks">Past 7 days Sleep Diary completion:</string>
    <string name="s_SleepDiaryReminder">Sleep Diary Reminder</string>
    <string name="s_RecommendedDaily">Recommended Daily</string>
    <string name="s_Time">Time</string>
    <string name="s_51a">CBT-i Coach is a mobile phone application for Veterans, Service Members, and others who are participating in Cognitive Behavioral Therapy for Insomnia.  It is intended to augment face-to-face care with a healthcare professional.  You can also use it on its own, but it is not intended to replace therapy for those who need it.\nIt will guide you through the process of learning about sleep, developing good sleep habits, and getting rid of habits that interfere with sleep.  It also provides a structured program to get your biological clock reset to make it easier to go to sleep and to sleep through the night.</string>
    <string name="s_ResetAllUserData">Reset All User Data</string>
    <string name="s_ProvideAUD">Provide Anonymous Usage Data</string>
    <string name="s_50b">Help improve this application by automatically sending daily diagnostics and usage data.  Diagnostic data may include location information.   Although no one can see your personal data, looking at overall trends helps us make better products.</string>
    <string name="s_PTeam">•	Julia E. Hoffman, Psy.D.\n•	Katherine Taylor, M.P.H.\n•	Eric Kuhn, Ph.D.\n•	Carolyn Greene, Ph.D.\n•	Kenneth Weingardt, Ph.D.\n•	Josef I. Ruzek, Ph.D.</string>
    <string name="s_SME">Subject Matter Experts</string>
    <string name="s_SMETeam">•	Rachel Manber, Ph.D.\n•	Mickey Trockel, M.D.\n•	Philip Gehrman, Ph.D.</string>
    <string name="s_ProjectPartners1">CBT-i Coach was a collaborative effort between VA’s National Center for PTSD, Stanford University Medical Center, and DoD’s National Center for Telehealth and Technology.\nCBT-i Coach is based on the therapy manual, Cognitive Behavioral Therapy for Insomnia in Veterans, by Rachel Manber, Ph.D., Leah Friedman, Ph.D., Colleen Carney, Ph.D., Jack Edinger, Ph.D., Dana Epstein, Ph.D., Patricia Haynes, Ph.D., Wilfred Pigeon, Ph.D. and Allison Siebern, Ph.D.  CBT-i has been shown to be efficacious for insomnia for both Veterans and civilians.</string>
    <string name="s_ProjectPartners4">The VA Sierra Pacific Mental Illness Research, Education, and Clinical Center is building an integrated system of clinical, research, and educational efforts designed to improve the clinical care for Veterans with dementia and with PTSD both in VISN 21 and system-wide.</string>
    <string name="s_ProjectPartners3">Stanford School of Medicine\'s mission is to be a premier research-intensive medical school that improves health through leadership and a collaborative approach to discovery and innovation in patient care, education, and research.</string>
    <string name="s_ProjectPartners5">The National Center for Telehealth and Technology |T2| researches, develops, evaluates, and deploys new and existing technologies for Psychological Health (PH) and Traumatic Brain Injury (TBI) across the Department of Defense (DoD). \nT2 is a component center of the Defense Centers of Excellence for Psychological Health and Traumatic Brain Injury (DCoE).\n\n\t"Technology to Make People Healthy"\n\nFor more information about insomnia and other topics for Veterans, see http://ptsd.va.gov.</string>
    <string name="s_ProjectPartners2">The National Center for PTSD, within the Department of Veterans Affairs, aims to help U.S. Veterans and others through research, education, and training on trauma and PTSD.\n\"Advancing Science and Promoting Understanding of Traumatic Stress\"</string>
    <string name="s_40b">Read about how your sleep functioning, sleep environment and daily habits can affect your health. Find definitions for terms used in cognitive behavioral therapy for insomnia.</string>
    <string name="s_CBTiGlossary">CBT-i Glossary</string>
    <string name="s_HealthySleepHabits">Healthy Sleep Habits</string>
    <string name="s_Sleep101">Sleep 1O1</string>
    <string name="s_Environment">Environment</string>
    <string name="s_glossary07t">Sleepy</string>
    <string name="s_glossary06t">Bed</string>
    <string name="s_glossary08t">Tired</string>
    <string name="s_glossary01t">Sleep Diary</string>
    <string name="s_glossary03t">Sleep Prescription</string>
    <string name="s_glossary02t">Sleep Efficiency</string>
    <string name="s_glossary05t">Total Sleep Time</string>
    <string name="s_glossary08">Feeling an overall lack of energy or general fatigue.</string>
    <string name="s_glossary06">Bed, in the context of this app, means any place designated for sleep.</string>
    <string name="s_glossary07">Feeling a need for sleep (compare to a feeling of "tiredness").</string>
    <string name="s_glossary05">Total Sleep Time:  The actual amount of sleep you get during a sleep period.  It’s equal to total sleep period minus awake time.</string>
    <string name="s_glossary04">Time in Bed is the amount of recommended time to be in bed.  It is determined by taking the recommended awake time minus bed time.</string>
    <string name="s_glossary03">Going to bed and waking up at the same times each day can help strengthen the natural cues from your internal biological sleep clock. This is part of the reason sleep therapists recommend a sleep prescription, a set bedtime and set wake time, for people who are having sleep difficulties</string>
    <string name="s_glossary02">Your sleep efficiency is the proportion of the time you spend asleep relative to the time you spend in bed.  For example, if you sleep for 4 hours out of the 6 hours you are in bed, your sleep efficiency is 4/6 or 66.6%.  The formula is for sleep efficiency is:  average sleep efficiency = average total sleep time / average time in bed</string>
    <string name="s_glossary01">A sleep diary is designed to gather information about your daily sleep pattern.  It should be filled out every day and is designed to be completed within two hours of getting out of bed in the morning.  If you forget to fill in the diary or are unable to finish it, leave the diary blank for that day.</string>
    <string name="s_glossary04t">Time in Bed</string>
</resources>