<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- middle buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_mysleepcreambackground"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bggraystriped"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_whitetextbox"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/buddy_learnglossary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary01t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary02t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary02" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary03t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary03" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary04t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary04" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary05t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary05" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary06t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary06" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary07t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary07" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/s_glossary08t"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingLeft="15dp"
                        android:text="@string/s_glossary08" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!-- middle buttons -->

</RelativeLayout>