<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/action_home"
        android:contentDescription="@string/action_home" />
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/action_about"
        android:contentDescription="@string/action_about" />
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/action_help"
        android:contentDescription="@string/action_help" />

</menu>